# aihc_hw5_self_learning_tutorial_ej8387

./: README.md  hw5_self_learning_deck_ej8387.md  hw5_self_learning_ej8387.ipynb  pyproject.toml  summarize_webmd_drug_reviews.py
summary_webapp/: a-poxide_oral.html  abilify_discmelt_oral.html  abilify_maintena_intramuscular.html  abilify_oral.html  acebutolol_oral.html  adapin_oral.html  adaril_intramuscular.html  alprazolam_intensol_oral.html  alprazolam_oral.html  amitriptyline-chlordiazepoxide_oral.html  amitriptyline_oral.html  amoxapine_oral.html  anafranil_oral.html  aplenzin_oral.html  aripiprazole_intramuscular.html  aripiprazole_oral.html  aristada_intramuscular.html  asenapine_sublingual.html  asendin_oral.html  atarax_oral.html  ativan_oral.html  atrazine_oral.html  aventyl_oral.html  brexpiprazole_oral.html  budeprion_sr_oral.html  budeprion_xl_oral.html  buproban_oral.html  bupropion_hbr_oral.html  bupropion_hcl_oral.html  bupropion_hcl_oral_(as_a_smoking_deterrent).html  caplyta_oral.html  carbamazepine_oral.html  cariprazine_oral.html  celexa_oral.html  chlordiazepoxide_hcl_oral.html  chlordiazepoxide_oral.html  chlorpromazine_injection.html  chlorpromazine_oral.html  cibalith-s_oral.html  citalopram_oral.html  (+164 more)
summary_webapp/pages/: a-poxide_oral.html  abilify_discmelt_oral.html  abilify_maintena_intramuscular.html  abilify_oral.html  acebutolol_oral.html  adapin_oral.html  adaril_intramuscular.html  alprazolam_intensol_oral.html  alprazolam_oral.html  amitriptyline-chlordiazepoxide_oral.html  amitriptyline_oral.html  amoxapine_oral.html  (+189 more)
